Finito esercizio finale
WebSocket